--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "author": "daniel ventura",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.5.1",
-    "http": "^0.0.1-security"
+    "discord.js": "^12.5.1"
   }
 }
