--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "daniel ventura",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.5.1"
+    "discord.js": "^12.5.1",
+    "discord.js-commando": "^0.12.2"
   }
 }
