--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "daniel ventura",
   "license": "ISC",
   "dependencies": {
+    "@vitalets/google-translate-api": "^5.1.0",
     "discord.js": "^12.5.1"
   }
 }
